// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget Header render should change status label is collapsed is falsy 1`] = `
<header data-test="widget-header" role="button" tabindex="0" class="widget-header">
  <section class="widget-header-control">
    <h3 class="widget-header-title">
      balance
    </h3> <span data-test="widget-header-status" class="widget-header-status">
      Show less
      <span class="widget-header-status-icon"><v-svg-icon-stub name="chevron-up" width="10px" fill="" height="5px"></v-svg-icon-stub></span></span>
  </section>
  <section class="widget-header-content">
    <spinner-stub size="24" iswhite="true"></spinner-stub>
    <v-link-stub href="https://wallet.endpass.com" skin="default" target="_blank" underline="true" class="widget-header-link">
      wallet.endpass.com
    </v-link-stub>
  </section>
</header>
`;

exports[`Widget Header render should correctly render 1`] = `
<header data-test="widget-header" role="button" tabindex="0" class="widget-header">
  <section class="widget-header-control">
    <h3 class="widget-header-title">
      balance
    </h3> <span data-test="widget-header-status" class="widget-header-status">
      Show more
      <span class="widget-header-status-icon"><v-svg-icon-stub name="chevron-down" width="10px" fill="" height="5px"></v-svg-icon-stub></span></span>
  </section>
  <section class="widget-header-content">
    <spinner-stub size="24" iswhite="true"></spinner-stub>
    <v-link-stub href="https://wallet.endpass.com" skin="default" target="_blank" underline="true" class="widget-header-link">
      wallet.endpass.com
    </v-link-stub>
  </section>
</header>
`;
